--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "coverage": "nyc npm test",
     "coveralls": "npm run coverage && nyc report --reporter=text-lcov | coveralls",
     "transpile": "mkdirp 'dist' && browserify --standalone 'Password-ruler' src/index.js -o dist/password-ruler.js -t [ babelify --presets [ es2015 ] ]",
-    "header": "header dist/*.js"
+    "header": "header dist/*.js",
+    "uglify": "uglifyjs dist/password-ruler.js --c --m --o dist/password-ruler.min.js",
+    "build": "npm run transpile && npm run uglify && header dist/*.js"
   },
   "repository": {
     "type": "git",
@@ -41,13 +43,15 @@
   "devDependencies": {
     "ava": "^0.11.0",
     "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.6",
     "eslint": "^2.1.0",
     "mkdirp": "^0.5.1",
-    "module-header": "^0.4.0",
+    "module-header": "^0.5.0",
     "nyc": "^5.6.0",
-    "onchange": "^2.0.0"
+    "onchange": "^2.0.0",
+    "uglify-js": "^2.6.2"
   }
 }
