--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "password-ruler",
   "version": "0.1.0",
-  "description": "Extensible password strength checker",
+  "description": "An extensible & lightweight module that helps to easily create custom password strength checkers",
   "main": "dist/password-ruler.js",
   "scripts": {
     "watch": "onchange 'src/*.js' 'test/*.js' -- npm run validate",
